...
    enum Constants {
        static let backgroundDark = UIColor(red: 0.984, green: 0.373, blue: 0.161, alpha: 1)
        static let backgroundColor = UIColor(red: 1, green: 0.6, blue: 0.375, alpha: 1)
        static let cornerRadius: CGFloat = 15
        static let labelColor = UIColor(red: 0.175, green: 0.175, blue: 0.175, alpha: 1)
        enum Title {
            static let text = "INFO"
            static let font = UIFont(name: "SFProDisplay-SemiBold", size: 18) ?? UIFont.systemFont(ofSize: 18)
        }
        enum InfoLabel {
            static let text = "Brick is wet - raining\nBrick is dry - sunny \nBrick is hard to see - fog\nBrick with cracks - very hot \nBrick with snow - snow\nBrick is swinging- windy\nBrick is gone - No Internet "
            static let font = UIFont(name: "SFProDisplay-Light", size: 15) ?? UIFont.systemFont(ofSize: 15)
        }
        enum HideButton {
            static let titleText = "Hide"
            static let cornerRadius: CGFloat = 15
            static let borderColor = UIColor(red: 0.342, green: 0.342, blue: 0.342, alpha: 1).cgColor
            static let borderWidth: CGFloat = 1
            static let titleColor = UIColor(red: 0.342, green: 0.342, blue: 0.342, alpha: 1)
            static let titleFont = UIFont(name: "SFProDisplay-Semibold", size: 15) ?? UIFont.systemFont(ofSize: 15)
        }
...
